# adk-branding-assistant-demo

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.fixed  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.simple  Dockerfile.uvicorn  README.md  app.yaml  cloudbuild.yaml  debug-build.sh  debug-permissions.sh  fix-permissions.sh  main.py  pyproject.minimal.toml  pyproject.toml  start.py
.github/workflows/: ci.yml  sync-public.yml  test-minimal.yml
agents/base/: __init__.py  agent_functions.py  base_agent.py  data_contracts.py  state_schema.py
agents/coordinator/: agent.py  session_manager.py
agents/discovery/: agent.py
agents/logo/: agent.py
agents/research/: agent.py
agents/visual/: agent.py
config/agent_configs/: quality_gates.py  quality_standards.py  responsibilities.py  session_config.py  workflow_config.py
config/deployment/: development.yaml
docs/architecture/: pattern_selection.md
scripts/: dev-setup.sh  lint.sh  test-docker.sh
scripts/deployment/: deploy-gcp.sh
scripts/setup/: init_dev.sh  quality_check.py
tools/state_management/: __init__.py  error_handling.py  quality_control.py  session_utilities.py  state_validators.py  workflow_manager.py
